--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -2525,6 +2525,7 @@ procedure.view.public: "Verfahren in Beteiligungsebene ansehen"
 procedure.view.public.short: "Verfahren ansehen"
 procedure: "Verfahren"
 procedure.report: "Verfahrensprotokoll"
+procedure_update.assignee_autoremove: "Die Zuweisung aller Elemente zu {removedUsers} Nutzer*innen wurde aufgehoben, da sie keinen Zugriff mehr auf dieses Verfahren haben."
 procedureCoupleToken.sourceProceudre.not.null: "Das Verfahren des Tokens konnte nicht gefunden werden."
 procedureCoupleToken.token.not.blank: "Es konnte kein Token gefunden werden."
 procedures: "Verfahren"
