b(refs T29149): add missing transkey
The transkey was added to the core translation file since it did not exist before but was used within the twig template.

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -2611,6 +2611,7 @@ public.participation.subheader: "Reden Sie mit!"
 public.participation.submit_your_statement: "Haben Sie Anmerkungen oder Ideen zu einem Verfahren? Reden Sie mit!"
 public.participation.welcome: "Willkommen bei demosplan!"
 public.participation: "Öffentlichkeitsbeteiligung"
+publicagency.add: "Institutionen hinzufügen"
 publication: "Veröffentlichung"
 publication.and.likers: "Veröffentlichung und Unterstützende"
 publication.and.voters: "Veröffentlichung und Mitzeichnende"
