bug(refs T27762): correct wrong spelling in export
revert changes. Add new transkey for ascii use case.

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -623,6 +623,7 @@ considerationadvice: "Abwägung / Empfehlung"
 considerationtable.back: "Zurück zur Abwägungstabelle"
 # deliberation table?
 considerationtable: "Abwägungstabelle"
+considerationtable_ascii: "Abwaegungstabelle"
 # considerationtext = considerationadvice
 considerationtext: "Abwägungstext"
 consolidate: "Gruppieren"
