feat(T29399): Add `action` in header, make header with trans keys, add DPLoading component

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -12,6 +12,7 @@ access.token.copied: "Zugangscode wurde kopiert."
 accessibility: "Barrierefreiheit"
 accessibility.explanation: "Erklärung zur Barrierefreiheit"
 act: "Vorgang"
+action: "Aktion"
 action.irreversible: "Dieser Vorgang kann nicht rückgängig gemacht werden."
 
 # Strings that get passed into the config/read/write strings as {roles}
@@ -1789,11 +1790,12 @@ insert: "Einfügen"
 institution: "Institution"
 institution.name: "Name der Institution"
 institution.represents: "vertretene Institution"
+institution.tag: "Schlagworte"
 institution.tag.addTag: "Schlagwort hinzufügen"
 institution.tag.administrate: "Schlagworte verwalten"
 institution.tag.create: "Schlagwort anlegen"
 institution.tag.name: "Name"
-institution.tags.management: 'Instituionen verschlagworten'
+institution.tags.management: "Instituionen verschlagworten"
 instruction: "Hinweistext"
 internal: "Intern"
 internalnote: "Interne Notiz"
