feat(T29399): Remove the new trans keys to use the keys from `tag`, add `id` in fields by fetching the list, align the button-row left instead taking the default
If you dont add 'id' in fields you get an error sending a request by editing the institutionTag.

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -1790,12 +1790,6 @@ insert: "Einfügen"
 institution: "Institution"
 institution.name: "Name der Institution"
 institution.represents: "vertretene Institution"
-institution.tag: "Schlagworte"
-institution.tag.addTag: "Schlagwort hinzufügen"
-institution.tag.administrate: "Schlagworte verwalten"
-institution.tag.create: "Schlagwort anlegen"
-institution.tag.name: "Name"
-institution.tags.management: "Instituionen verschlagworten"
 instruction: "Hinweistext"
 internal: "Intern"
 internalnote: "Interne Notiz"
@@ -3429,6 +3423,7 @@ table.cols.sort: "Spalten sortieren nach"
 table.rows: "Reihen"
 tabs.navigate: "Inhalte in Tabs"
 tag_topic.name.default: "Sonstiges"
+tag.administrate: "Schlagworte verwalten"
 tag.administration: "Schlagworte"
 tag.administration_single: "Schlagwort bearbeiten"
 tag.category: "Schlagwortkategorie"
@@ -3437,6 +3432,7 @@ tag.delete: "Schlagwort löschen"
 tag.move.toTopic: "in Thema verschieben"
 tag.move: "Schlagwort verschieben"
 tag.name: "Name des neuen Schlagwortes"
+tag.new: "Neues Schlagwort"
 tag.rename: "Schlagwort umbenennen"
 tag.search: "Schlagwort suchen"
 tag.topic.new: "Schlagwort oder Thema anlegen…"
@@ -3446,7 +3442,7 @@ tag: "Schlagwort"
 tag.create.duplicated.title: "Das Schlagwort existiert in diesem Verfahren bereits."
 tags: "Schlagworte"
 tags.assigned: "Zugewiesene Schlagworte"
-tags.create: "Schlagworte anlegen"
+tags.create: "Schlagwort anlegen"
 tags.import.help: "Importieren Sie Schlagworte aus einer Liste im Format CSV (Trennzeichen-getrennt)."
 tags.import: "Schlagworte importieren"
 tags.noentries: "Für dieses Verfahren sind noch keine Schlagworte vorhanden. Um Schlagworte hinzuzufügen erstellen Sie bitte zunächst unten ein neues Thema."
