feat(T29399): Add the trans key from menu in the correct message yml file

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -1790,6 +1790,7 @@ insert: "Einfügen"
 institution: "Institution"
 institution.name: "Name der Institution"
 institution.represents: "vertretene Institution"
+institution.tags.management: "Institutionen verschlagworten"
 instruction: "Hinweistext"
 internal: "Intern"
 internalnote: "Interne Notiz"
