feat(T29399): Check for unique name by adding or updating a tag

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -3916,6 +3916,7 @@ workflow.place: "Schritt"
 workflow.place.added: "Schritt wurde hinzugefügt"
 workflow.place.deleted: "Schritt gelöscht"
 workflow.place.error.duplication: "Der Name des Schritts ist bereits in Verwendung. Bitte vergeben Sie einen anderen Namen."
+workflow.tag.error.duplication: "Der Name des Labels ist bereits in Verwendung. Bitte geben Sie einen anderen Namen."
 worksheet: "Arbeitsblatt"
 xplan: "XPlan"
 xplanning: "XPlanung"
