feature (refs T27535): added a missing transKey and reverted changes made to GetPropertiesEvent.php and ProcedureCoupleTokenSubscriber.php since they are present in PR https://github.com/demos-europe/demosplan-core/pull/119

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -563,7 +563,9 @@ confirm.statement.id.copied.nolink: "Stellungnahme {externId} wurde erfolgreich 
 confirm.statement.id.deleted: "Stellungnahme {externId} wurde erfolgreich gelöscht."
 confirm.statement.id.updated: "Stellungnahme <a href=\"{link}\" target=\"_blank\">{externId}</a> wurde erfolgreich aktualisiert."
 confirm.statement.id.updated.nolink: "Stellungnahme {externId} wurde erfolgreich aktualisiert."
+confirm.statement.id.synchronized.source: "Die Stellungnahme {externId} wurde mit dem gekoppelten Verfahren synchronisiert."
 confirm.statement.id.synchronized.source.nolink: "Die Stellungnahme {externId} wurde mit dem gekoppelten Verfahren synchronisiert."
+confirm.statement.id.synchronized.target: "Die Stellungnahme {externId} wurde aus dem gekoppelten Verfahren synchronisiert."
 confirm.statement.id.synchronized.target.nolink: "Die Stellungnahme {externId} wurde aus dem gekoppelten Verfahren synchronisiert."
 confirm.original.statement.attachment.deleted: "Anhänge der Originalstellungnahme <a href=\"{link}\">{externId}</a> und deren Kopien gelöscht."
 confirm.original.statement.meta.anonymized: "Einreichendendaten der Originalstellungnahme <a href=\"{link}\">{externId}</a> und deren Kopien anonymisiert."
