--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -12,7 +12,6 @@ access.token.copied: "Zugangscode wurde kopiert."
 accessibility: "Barrierefreiheit"
 accessibility.explanation: "Erklärung zur Barrierefreiheit"
 act: "Vorgang"
-action: "Aktion"
 action.irreversible: "Dieser Vorgang kann nicht rückgängig gemacht werden."
 
 # Strings that get passed into the config/read/write strings as {roles}
@@ -3443,7 +3442,7 @@ tag: "Schlagwort"
 tag.create.duplicated.title: "Das Schlagwort existiert in diesem Verfahren bereits."
 tags: "Schlagworte"
 tags.assigned: "Zugewiesene Schlagworte"
-tags.create: "Schlagwort anlegen"
+tags.create: "Schlagworte anlegen"
 tags.import.help: "Importieren Sie Schlagworte aus einer Liste im Format CSV (Trennzeichen-getrennt)."
 tags.import: "Schlagworte importieren"
 tags.noentries: "Für dieses Verfahren sind noch keine Schlagworte vorhanden. Um Schlagworte hinzuzufügen erstellen Sie bitte zunächst unten ein neues Thema."
