--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -1793,6 +1793,7 @@ insert: "Einfügen"
 institution: "Institution"
 institution.name: "Name der Institution"
 institution.represents: "vertretene Institution"
+institution.tags.management: "Institutionen verschlagworten"
 instruction: "Hinweistext"
 internal: "Intern"
 internalnote: "Interne Notiz"
@@ -3426,6 +3427,7 @@ table.cols.sort: "Spalten sortieren nach"
 table.rows: "Reihen"
 tabs.navigate: "Inhalte in Tabs"
 tag_topic.name.default: "Sonstiges"
+tag.administrate: "Schlagworte verwalten"
 tag.administration: "Schlagworte"
 tag.administration_single: "Schlagwort bearbeiten"
 tag.category: "Schlagwortkategorie"
@@ -3434,6 +3436,7 @@ tag.delete: "Schlagwort löschen"
 tag.move.toTopic: "in Thema verschieben"
 tag.move: "Schlagwort verschieben"
 tag.name: "Name des neuen Schlagwortes"
+tag.new: "Neues Schlagwort"
 tag.rename: "Schlagwort umbenennen"
 tag.search: "Schlagwort suchen"
 tag.topic.new: "Schlagwort oder Thema anlegen…"
@@ -3915,6 +3918,7 @@ workflow.place: "Schritt"
 workflow.place.added: "Schritt wurde hinzugefügt"
 workflow.place.deleted: "Schritt gelöscht"
 workflow.place.error.duplication: "Der Name des Schritts ist bereits in Verwendung. Bitte vergeben Sie einen anderen Namen."
+workflow.tag.error.duplication: "Das Schlagwort existiert bereits."
 worksheet: "Arbeitsblatt"
 xplan: "XPlan"
 xplanning: "XPlanung"
