--- a/translations/master-toeb-list+intl-icu.de.yml
+++ b/translations/master-toeb-list+intl-icu.de.yml
@@ -29,3 +29,4 @@ merge: Zusammenführung
 label.fromTemplate: "Aus Vorlage"
 label.newEntry: "Neuer Eintrag"
 label.oldEntry: "Alter Eintrag"
+lable.test
