feature(refs T30282): make ProcessingPage available to addonize Ado #1740
- Added Translations
- Added Translationkey

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -1752,6 +1752,7 @@ import.process.finished: "Import abgeschlossen"
 import.statements.fromPdf: "Stellungnahmen aus PDF-Dokumenten importieren"
 import.statements.fromPdf.label: "Stellungnahmen aus PDF-Dokumenten importieren (maximal {maxFiles} Dateien gleichzeitig)"
 import.verb: "Importieren"
+imported.verb: "Importiert"
 imprint: "Impressum"
 in: "in"
 inaccessible: 'ohne Zugriff'
