fix (refs T30460): WIP: Auto-remove caseworker(name) in case of remove user from authorized users of procedure.

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -2552,6 +2552,7 @@ procedure.view.public.short: "Verfahren ansehen"
 procedure: "Verfahren"
 procedure.report: "Verfahrensprotokoll"
 procedure_update.assignee_autoremove: "Die Zuweisung aller Elemente zu {removedUsers} Nutzer*innen wurde aufgehoben, da sie keinen Zugriff mehr auf dieses Verfahren haben."
+procedure_update.caseworker_autoremove: "Die Nennung als Sachbearbeiter*in der Nutzer*innen {removedUsers} an allen Elementen wurde aufgehoben, da sie keinen Zugriff mehr auf dieses Verfahren haben."
 procedureCoupleToken.sourceProceudre.not.null: "Das Verfahren des Tokens konnte nicht gefunden werden."
 procedureCoupleToken.token.not.blank: "Es konnte kein Token gefunden werden."
 procedures: "Verfahren"
