bug(refs T30480): Beautify and improve code

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -889,7 +889,8 @@ element.assigned: "Bezug zu Planungsdokument"
 element.delete: "Element entfernen"
 element.notassigned: "Es ist kein Bezug zu einem Planungsdokument festgelegt."
 element.selected: "Ausgewähltes Element"
-element.state.autoswitch: "Status der Kategorie(n) automatisch auf \"{state}\" umstellen"
+element.state.autoswitch: "Status der Kategorie automatisch auf \"{state}\" umstellen"
+element.state.publish: "Kategorien sofort veröffentlichen."
 elementimport: "Import der Planungsdokumente"
 elements.assigned: "Bezug zu Planungsdokumenten"
 elements.bulk.edit: "Planungsdokumente bearbeiten"
