feat (refs T30460): adds new messages

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -2557,6 +2557,8 @@ procedure.view.public.short: "Verfahren ansehen"
 procedure: "Verfahren"
 procedure.report: "Verfahrensprotokoll"
 procedure_update.assignee_autoremove: "Die Zuweisung aller Elemente zu {removedUsers} Nutzer*innen wurde aufgehoben, da sie keinen Zugriff mehr auf dieses Verfahren haben."
+procedure_update.caseworker_autoremove.error: "Bei dem Versuch nicht länger dem Verfahren zugehörige Benutzer*innen als Sachbearbeiter*in von Stellungnahmen zu entfernen, ist ein Fehler aufgetreten."
+procedure_update.caseworker_autoremove.success: "Die Nennung als Sachbearbeiter*in wurde für {removedUsers} Benutzer*innen an allen Stellungnahmen aufgehoben, da sie keinen Zugriff mehr auf dieses Verfahren haben."
 procedureCoupleToken.sourceProceudre.not.null: "Das Verfahren des Tokens konnte nicht gefunden werden."
 procedureCoupleToken.token.not.blank: "Es konnte kein Token gefunden werden."
 procedures: "Verfahren"
