feat (ref T29639): Replace the old copyright by the new one.

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -712,7 +712,7 @@ copy: "Kopieren"
 copy.to.procedure: "In ein anderes Verfahren kopieren"
 copyof: "Kopie von"
 copyright.source: "Copyright-Vermerk"
-copyright.sh: "Kartengrundlage: © GeoBasis-DE/LVermGeo SH (www.LVermGeoSH.schleswig-holstein.de)"
+copyright.sh: "© basemap.de BKG (www.basemap.de) / LVermGeo SH (www.LVermGeoSH.schleswig-holstein.de)"
 counties: "Kreise"
 counties.and.municipalities: "Kreise und Gemeinden"
 county: "Kreis"
