fix(T31192): add aria-label to the table tag with a new translation key 'misc.softwarecomponents.table'

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -2048,6 +2048,7 @@ menu: "Menü"
 merge: "Zusammenführen"
 message: "Nachricht"
 message.submitters.sent: "Eine E-Mail wurde an alle {count} Einreichenden versendet."
+misc.softwarecomponents.table: "Verwendete Softwarekomponenten mit Lizenz"
 moderate: "Moderieren"
 more: "Weitere"
 more.attachments: "Weitere Anhänge"
