fix (refs T16953): handle missing username in report entry
In case a user was deleted we use a translation that implies
this.

In case the user has no name, which is the case for the
anonymous user (aka "system" user) we use a translation that
implies this.

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -3685,6 +3685,7 @@ user.roles: "Anwender*innen nach Rollen"
 user.story: "Userstory"
 user.nobody: "Niemand"
 user.system: "Not Available"
+user.system.name: "System"
 username: "Nutzername"
 users: "Nutzende"
 validation.error.city: "Bitte verwenden Sie ausschließlich Buchstaben und Leerzeichen."
