fix(refs T30974): rework color tokens
new system/message color tokens are defined in a more granular way.
where possible, new tokens from demosplan-ui are used. they replace
the old system/msg color variables.

rename `color--highlight` with `color-brand-highlight`.

new bg color tokens for neutrals are used (bg-color-ui-light
and bg-color-ui-medium).

new tokens for deleted + inserted text are introduced.

notification components are tweaked to get the new colors.

scss file structure refactoring:
- _settings-color-palette.scss and _settings-color-assignment.scss moved together into _settings-color.scss
- tokens/color.scss removed, as everything lives inside color.scss now

adapt ewm overrides to new tokens + file structure.

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -3339,8 +3339,8 @@ statements.selected: |
     }
 statements.splittable.now: |
     {count, plural,
-        =1 { <span class="weight--bold color--system-info">1</span> Stellungnahme kann jetzt aufgeteilt werden.}
-        other { <span class="weight--bold color--system-info">#</span> Stellungnahmen können jetzt aufgeteilt werden.}
+        =1 { <span class="weight--bold color-ui-message-info-text">1</span> Stellungnahme kann jetzt aufgeteilt werden.}
+        other { <span class="weight--bold color-ui-message-info-text">#</span> Stellungnahmen können jetzt aufgeteilt werden.}
     }
 statements.submitted: "eingereichte Stellungnahmen"
 statements.submitted.heading: "Eingereichte Stellungnahmen"
